Fix filters position on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ margin-left: 20px;
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
     .hebergements-and-populaires {
         flex-direction: column;
     }
